<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.lprub.recetario.actividades.ActividadCategorias"
    android:minHeight="75dp"
    android:minWidth="75dp"
    android:background="#fa9241">

    <ImageView
        android:layout_width="110dp"
        android:layout_height="175dp"
        android:id="@+id/ivArroz"
        android:layout_row="0"
        android:layout_column="0"
        android:src="@drawable/arroz"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:onClick="onClick" />

    <ImageView
        android:layout_width="110dp"
        android:layout_height="175dp"
        android:id="@+id/ivVerduras"
        android:layout_row="0"
        android:layout_column="1"
        android:src="@drawable/verduras"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:onClick="onClick" />

    <ImageView
        android:layout_width="110dp"
        android:layout_height="175dp"
        android:id="@+id/ivSopas"
        android:layout_row="0"
        android:layout_column="2"
        android:src="@drawable/sopas"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:onClick="onClick" />

    <ImageView
        android:layout_width="110dp"
        android:layout_height="175dp"
        android:id="@+id/ivSalsas"
        android:layout_row="1"
        android:layout_column="0"
        android:src="@drawable/salsas"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:onClick="onClick" />

    <ImageView
        android:layout_width="110dp"
        android:layout_height="175dp"
        android:id="@+id/ivCarne"
        android:layout_row="1"
        android:layout_column="1"
        android:src="@drawable/carnes"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:onClick="onClick" />

    <ImageView
        android:layout_width="110dp"
        android:layout_height="175dp"
        android:id="@+id/ivPotajes"
        android:layout_row="1"
        android:layout_column="2"
        android:src="@drawable/potajes"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:onClick="onClick" />

    <ImageView
        android:layout_width="110dp"
        android:layout_height="175dp"
        android:id="@+id/ivPescado"
        android:layout_row="2"
        android:layout_column="0"
        android:src="@drawable/pescados"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="12dp"
        android:onClick="onClick" />

    <ImageView
        android:layout_width="110dp"
        android:layout_height="175dp"
        android:id="@+id/ivPostres"
        android:layout_row="2"
        android:layout_column="1"
        android:src="@drawable/postres"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="12dp"
        android:onClick="onClick" />

    <ImageView
        android:layout_width="110dp"
        android:layout_height="175dp"
        android:id="@+id/ivGuarniciones"
        android:layout_row="2"
        android:layout_column="2"
        android:src="@drawable/guarniciones"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="12dp"
        android:onClick="onClick" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/categorias"
        android:id="@+id/textView"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_marginLeft="110dp" />

    <TextView
        android:layout_width="105dp"
        android:layout_height="40dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/arroces"
        android:id="@+id/textView2"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_gravity="bottom|center_horizontal"
        android:textStyle="bold|italic"
        android:layout_margin="5dp" />

    <TextView
        android:layout_width="105dp"
        android:layout_height="40dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/verduras"
        android:id="@+id/textView3"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_gravity="bottom|center_horizontal"
        android:textStyle="bold|italic"
        android:layout_margin="5dp" />

    <TextView
        android:layout_width="105dp"
        android:layout_height="40dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/sopas"
        android:id="@+id/textView4"
        android:layout_row="0"
        android:layout_column="2"
        android:layout_gravity="bottom|center_horizontal"
        android:textStyle="bold|italic"
        android:layout_margin="5dp" />

    <TextView
        android:layout_width="105dp"
        android:layout_height="40dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/salsas"
        android:id="@+id/textView5"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_gravity="bottom|center_horizontal"
        android:textStyle="bold|italic"
        android:layout_margin="5dp" />

    <TextView
        android:layout_width="105dp"
        android:layout_height="40dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/carne"
        android:id="@+id/textView6"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_gravity="bottom|center_horizontal"
        android:textStyle="bold|italic"
        android:layout_margin="5dp" />

    <TextView
        android:layout_width="105dp"
        android:layout_height="40dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/potajes"
        android:id="@+id/textView7"
        android:layout_row="1"
        android:layout_column="2"
        android:layout_gravity="bottom|center_horizontal"
        android:textStyle="bold|italic"
        android:layout_margin="5dp" />

    <TextView
        android:layout_width="105dp"
        android:layout_height="55dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/pescados"
        android:id="@+id/textView8"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_gravity="bottom|center_horizontal"
        android:textStyle="bold|italic"
        android:layout_margin="5dp" />

    <TextView
        android:layout_width="105dp"
        android:layout_height="40dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/postres"
        android:id="@+id/textView9"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_gravity="bottom|center_horizontal"
        android:textStyle="bold|italic"
        android:layout_margin="5dp" />

    <TextView
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/guarniciones"
        android:id="@+id/textView10"
        android:layout_row="2"
        android:layout_column="2"
        android:layout_gravity="bottom|center_horizontal"
        android:textStyle="bold|italic"
        android:layout_margin="5dp" />

</GridLayout>
