<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.lprub.recetario.actividades.ActividadVisualizar"
    android:background="#fae6ac">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView2"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ivFoto"
                android:src="@drawable/not"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/borde" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Large Text"
                android:id="@+id/tvNombre"
                android:gravity="center_horizontal"
                android:layout_below="@+id/ivFoto"
                android:layout_centerHorizontal="true"
                android:layout_margin="5dp"
                android:textStyle="italic" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="10dp"
                android:background="@drawable/separador"
                android:layout_below="@+id/tvNombre"
                android:id="@+id/separator"
                android:layout_marginLeft="75dp"
                android:layout_marginRight="75dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/tituloIngredientes"
                android:id="@+id/tvTituloIngredientes"
                android:layout_below="@+id/separator"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:textStyle="italic" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Large Text"
                android:id="@+id/tvIngredientes"
                android:layout_below="@+id/tvTituloIngredientes"
                android:layout_margin="5dp"/>
            <View
                android:layout_width="fill_parent"
                android:layout_height="5dp"
                android:background="@drawable/separador2"
                android:layout_below="@+id/tvIngredientes"
                android:id="@+id/separator2"
                android:layout_margin="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/tituloUtensilios"
                android:id="@+id/tvTituloUtensilios"
                android:layout_below="@+id/separator2"
                android:gravity="center_horizontal"
                android:layout_centerHorizontal="true"
                android:textStyle="italic"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Large Text"
                android:id="@+id/tvUtensilios"
                android:layout_below="@+id/tvTituloUtensilios"
                android:layout_margin="5dp"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="5dp"
                android:background="@drawable/separador2"
                android:layout_below="@+id/tvUtensilios"
                android:id="@+id/separator3"
                android:layout_margin="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/tituloInstrucciones"
                android:id="@+id/tvTituloInstrucciones"
                android:layout_below="@+id/separator3"
                android:gravity="center_horizontal"
                android:layout_centerHorizontal="true"
                android:textStyle="italic" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Large Text"
                android:id="@+id/tvInstrucciones"
                android:layout_below="@+id/tvTituloInstrucciones"
                android:layout_margin="5dp"/>

        </RelativeLayout>
    </ScrollView>


</RelativeLayout>
